[gd_scene load_steps=13 format=3 uid="uid://d3727cp6wwtt7"]

[ext_resource type="Script" uid="uid://cl5s2hc5xgf5u" path="res://Scripts/Enemy/enemy_practice.gd" id="1_xebnp"]
[ext_resource type="Texture2D" uid="uid://c74cqvgtwsww3" path="res://Aseprite/GUI/HealthBar/BackgroundVidaPractice.png" id="2_mrvak"]
[ext_resource type="Texture2D" uid="uid://fvxwhokuinac" path="res://Aseprite/GUI/HealthBar/HealthBarFull.png" id="3_novju"]
[ext_resource type="Texture2D" uid="uid://mlf7ba786y67" path="res://Aseprite/Animacions/Enemy/enemyPracticeAnimations.png" id="4_vv8y3"]

[sub_resource type="Animation" id="Animation_cmeoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_10wo1"]
resource_name = "enemy_death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_i5tp4"]
resource_name = "enemy_hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_rikk5"]
resource_name = "enemy_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bde0w"]
_data = {
&"RESET": SubResource("Animation_cmeoc"),
&"enemy_death": SubResource("Animation_10wo1"),
&"enemy_hurt": SubResource("Animation_i5tp4"),
&"enemy_idle": SubResource("Animation_rikk5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_875us"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xb35f"]
radius = 10.6875

[sub_resource type="CircleShape2D" id="CircleShape2D_4frl6"]
radius = 68.0294

[node name="EnemyPractice" type="CharacterBody2D" groups=["EnemyPractice"]]
collision_layer = 4
script = ExtResource("1_xebnp")

[node name="Background" type="Sprite2D" parent="."]
process_mode = 1
position = Vector2(0, -18)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_mrvak")

[node name="HealthBar" type="Sprite2D" parent="."]
process_mode = 1
position = Vector2(0, -18)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_novju")

[node name="EnemySprite" type="Sprite2D" parent="."]
process_mode = 1
texture = ExtResource("4_vv8y3")
hframes = 10
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 1
libraries = {
&"": SubResource("AnimationLibrary_bde0w")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_mode = 1
rotation = 1.5708
shape = SubResource("CircleShape2D_875us")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemyHitBox" type="Area2D" parent="."]
process_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_xb35f")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemyChase" type="Area2D" parent="."]
process_mode = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyChase"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_4frl6")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="DirectionTimer" type="Timer" parent="."]
process_mode = 1
autostart = true

[connection signal="area_entered" from="EnemyHitBox" to="." method="_on_enemy_hit_box_area_entered"]
[connection signal="area_entered" from="EnemyChase" to="." method="_on_enemy_chase_area_entered"]
[connection signal="area_exited" from="EnemyChase" to="." method="_on_enemy_chase_area_exited"]
[connection signal="body_entered" from="EnemyChase" to="." method="_on_enemy_chase_body_entered"]
[connection signal="body_exited" from="EnemyChase" to="." method="_on_enemy_chase_body_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
